--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,17 +6,17 @@
   <p>MST Balance: {{ mstBalance }}</p>
   <p>MPT Balance: {{ mptBalance }}</p>
 
-  <button class="btn btn-primary mb-4 mx-2" (click)="toggleForm()">
-    Add Account
-  </button>
-
-  <button class="btn btn-secondary mb-4 mx-2" (click)="toggleTransferForm()">
-    Transfer Tokens
-  </button>
-
-  <button class="btn btn-success mb-4 mx-2" (click)="toggleMintForm()">
-    Mint Tokens
-  </button>
+  <div class="d-flex mb-4">
+    <button class="btn btn-primary mx-2" (click)="toggleForm()">
+      Add Account
+    </button>
+    <button class="btn btn-secondary mx-2" (click)="toggleTransferForm()">
+      Transfer Tokens
+    </button>
+    <button class="btn btn-success mx-2" (click)="toggleMintForm()">
+      Mint Tokens
+    </button>
+  </div>
 
   <div *ngIf="showForm" class="card p-4 mb-4">
     <form [formGroup]="accountForm" (ngSubmit)="addAccount()">
@@ -47,7 +47,7 @@
           type="email"
         />
         <div
-          class="error-message"
+          class="text-danger"
           *ngIf="
             accountForm.get('email').hasError('required') &&
             accountForm.get('email').touched
@@ -56,7 +56,7 @@
           Email is required.
         </div>
         <div
-          class="error-message"
+          class="text-danger"
           *ngIf="
             accountForm.get('email').hasError('email') &&
             accountForm.get('email').touched
@@ -89,7 +89,7 @@
           </button>
         </div>
         <div
-          class="error-message"
+          class="text-danger"
           *ngIf="
             accountForm.get('password').hasError('required') &&
             accountForm.get('password').touched
@@ -98,7 +98,7 @@
           Password is required.
         </div>
         <div
-          class="error-message"
+          class="text-danger"
           *ngIf="
             accountForm.get('password').hasError('minlength') &&
             accountForm.get('password').touched
@@ -131,7 +131,7 @@
           </button>
         </div>
         <div
-          class="error-message"
+          class="text-danger"
           *ngIf="
             accountForm.get('confirmPassword').hasError('required') &&
             accountForm.get('confirmPassword').touched
@@ -140,7 +140,7 @@
           Confirm Password is required.
         </div>
         <div
-          class="error-message"
+          class="text-danger"
           *ngIf="
             accountForm.hasError('passwordMismatch') &&
             accountForm.get('confirmPassword').touched
@@ -179,11 +179,11 @@
           type="text"
         />
         <div
+          class="text-danger"
           *ngIf="
             transferForm.controls['recipientAccountId'].invalid &&
             transferForm.controls['recipientAccountId'].touched
           "
-          class="text-danger"
         >
           Invalid Account ID.
         </div>
@@ -217,6 +217,7 @@
       </button>
     </form>
   </div>
+
   <div *ngIf="showMintForm" class="card p-4 mb-4">
     <h2 class="mb-4">Mint Tokens</h2>
     <form [formGroup]="mintForm" (ngSubmit)="mintTokens()">
@@ -249,6 +250,7 @@
       </button>
     </form>
   </div>
+
   <div class="card p-4 mb-4">
     <h2 class="mb-4">Query Account</h2>
     <form [formGroup]="queryForm" (ngSubmit)="queryAccount()">
@@ -298,54 +300,56 @@
   </div>
 
   <h2 class="mb-4">All Accounts</h2>
-  <div class="card p-1 my-4 table-responsive">
-    <table class="table table-striped table-responsive">
-      <thead>
-        <tr>
-          <th scope="col">Alias</th>
-          <th scope="col">Account ID</th>
-          <th scope="col">Account Private Key</th>
-          <th scope="col">Email</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let account of accounts">
-          <td>{{ account.alias }}</td>
-          <td>
-            {{ account.accountId }}
-            <button
-              class="btn btn-outline-secondary btn-sm"
-              (click)="copyToClipboard(account.accountId)"
-            >
-              Copy
-            </button>
-          </td>
-          <td>
-            {{ maskValue(account.accountPrivateKey) }}
-            <button
-              class="btn btn-outline-secondary btn-sm"
-              (click)="copyToClipboard(account.accountPrivateKey)"
-            >
-              Copy
-            </button>
-          </td>
-
-          <td>{{ account.email }}</td>
-          <td>
-            <button
-              class="btn btn-danger"
-              (click)="confirmDeleteAccount(account.id)"
-            >
-              Delete
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="card p-4 mb-4">
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Alias</th>
+            <th scope="col">Account ID</th>
+            <th scope="col">Account Private Key</th>
+            <th scope="col">Email</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let account of accounts">
+            <td>{{ account.alias }}</td>
+            <td>
+              {{ account.accountId }}
+              <button
+                class="btn btn-outline-secondary btn-sm"
+                (click)="copyToClipboard(account.accountId)"
+              >
+                Copy
+              </button>
+            </td>
+            <td>
+              {{ maskValue(account.accountPrivateKey) }}
+              <button
+                class="btn btn-outline-secondary btn-sm"
+                (click)="copyToClipboard(account.accountPrivateKey)"
+              >
+                Copy
+              </button>
+            </td>
+            <td>{{ account.email }}</td>
+            <td>
+              <button
+                class="btn btn-danger btn-sm"
+                (click)="confirmDeleteAccount(account.id)"
+              >
+                Delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
+
   <div *ngIf="showDeleteAccountForm" class="modal-backdrop">
-    <div class="modal-content">
+    <div class="modal-content p-4">
       <h2 class="mb-4">Confirm Deletion</h2>
       <p>
         Please repeat this word to confirm deletion:
@@ -371,41 +375,44 @@
       </form>
     </div>
   </div>
+
   <div class="card p-4">
     <h2 class="mb-4">All Tokens</h2>
-    <table class="table table-striped table-responsive">
-      <thead>
-        <tr>
-          <th scope="col">Token Name</th>
-          <th scope="col">Token Symbol</th>
-          <th scope="col">Token ID</th>
-          <th scope="col">Ether Address</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let token of tokens">
-          <td>{{ token.tokenName }}</td>
-          <td>{{ token.tokenSymbol }}</td>
-          <td>
-            {{ token.tokenId }}
-            <button
-              class="btn btn-outline-secondary btn-sm"
-              (click)="copyToClipboard(token.tokenId)"
-            >
-              Copy
-            </button>
-          </td>
-          <td>
-            {{ maskValue(token.tokenEther) }}
-            <button
-              class="btn btn-outline-secondary btn-sm"
-              (click)="copyToClipboard(token.tokenEther)"
-            >
-              Copy
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Token Name</th>
+            <th scope="col">Token Symbol</th>
+            <th scope="col">Token ID</th>
+            <th scope="col">Ether Address</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let token of tokens">
+            <td>{{ token.tokenName }}</td>
+            <td>{{ token.tokenSymbol }}</td>
+            <td>
+              {{ token.tokenId }}
+              <button
+                class="btn btn-outline-secondary btn-sm"
+                (click)="copyToClipboard(token.tokenId)"
+              >
+                Copy
+              </button>
+            </td>
+            <td>
+              {{ maskValue(token.tokenEther) }}
+              <button
+                class="btn btn-outline-secondary btn-sm"
+                (click)="copyToClipboard(token.tokenEther)"
+              >
+                Copy
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
