--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,46 +50,83 @@
     >
       Claim Rewards
     </button>
-    <button class="btn btn-warning mx-2" (click)="toggleAddFavoriteForm()">
+    <button class="btn btn-warning mx-2" (click)="toggleForm('addFavorite')">
       Add Favorite
     </button>
+    <button class="btn btn-info mx-2" (click)="toggleForm('favorites')">
+      My Favorites
+    </button>
   </div>
-  <div *ngIf="showAddFavoriteForm" class="card p-4 mb-4">
-    <h3 class="card-title">Add Favorite</h3>
-    <form [formGroup]="favoriteForm" (ngSubmit)="addFavorite()">
-      <div class="form-group mb-3">
-        <label for="alias">Alias</label>
-        <input
-          type="text"
-          id="alias"
-          class="form-control"
-          formControlName="alias"
-          required
-        />
-      </div>
-      <div class="form-group mb-3">
-        <label for="accountId">Account ID</label>
-        <input
-          type="text"
-          id="accountId"
-          class="form-control"
-          formControlName="accountId"
-          required
-        />
-      </div>
-      <button
-        type="submit"
-        class="btn btn-primary"
-        [disabled]="favoriteForm.invalid"
-      >
-        Add Favorite
-        <span
-          *ngIf="favoriteSpinner"
-          class="spinner-border spinner-border-sm ms-2"
-        ></span>
-      </button>
-    </form>
+
+  <!-- Add Favorite Form -->
+  <div *ngIf="showAddFavoriteForm" class="card mb-4">
+    <div class="card-header">
+      <h3 class="card-title">Add Favorite</h3>
+    </div>
+    <div class="card-body">
+      <form [formGroup]="favoriteForm" (ngSubmit)="addFavorite()">
+        <div class="form-group mb-3">
+          <label for="alias">Alias</label>
+          <input
+            id="alias"
+            class="form-control"
+            formControlName="alias"
+            type="text"
+            required
+          />
+        </div>
+        <div class="form-group mb-3">
+          <label for="accountId">Account ID</label>
+          <input
+            id="accountId"
+            class="form-control"
+            formControlName="accountId"
+            type="text"
+            required
+          />
+        </div>
+        <button
+          type="submit"
+          class="btn btn-success"
+          [disabled]="favoriteForm.invalid || favoriteSpinner"
+        >
+          Add Favorite
+          <span
+            *ngIf="favoriteSpinner"
+            class="spinner-border spinner-border-sm ms-2"
+          ></span>
+        </button>
+      </form>
+    </div>
   </div>
+
+  <div *ngIf="showFavorites" class="card p-4 mb-4">
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Alias</th>
+            <th scope="col">Account ID</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let favorite of favorites">
+            <td>{{ favorite.alias }}</td>
+            <td>
+              {{ favorite.accountId }}
+              <button
+                class="btn btn-outline-secondary btn-sm"
+                (click)="copyToClipboard(favorite.accountId)"
+              >
+                Copy
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
   <div *ngIf="showSendTokensForm" class="card mb-4">
     <div class="card-header">
       <h3 class="card-title">Send Tokens</h3>
