--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -328,11 +328,12 @@
 </div>
 
 
-  <h2 class="mb-4">All Accounts</h2>
-  <div class="card p-4 mb-4">
+  <div class="container mt-5">
+  <h2 class="mb-4 text-center">All Accounts</h2>
+  <div class="card shadow-sm p-4 mb-4">
     <div class="table-responsive">
-      <table class="table table-striped">
-        <thead>
+      <table class="table table-striped table-hover">
+        <thead class="table-dark">
           <tr>
             <th scope="col">Alias</th>
             <th scope="col">Account ID</th>
@@ -347,7 +348,7 @@
             <td>
               {{ account.accountId }}
               <button
-                class="btn btn-outline-secondary btn-sm"
+                class="btn btn-outline-secondary btn-sm ms-2"
                 (click)="copyToClipboard(account.accountId)"
               >
                 Copy
@@ -356,7 +357,7 @@
             <td>
               {{ maskValue(account.accountPrivateKey) }}
               <button
-                class="btn btn-outline-secondary btn-sm"
+                class="btn btn-outline-secondary btn-sm ms-2"
                 (click)="copyToClipboard(account.accountPrivateKey)"
               >
                 Copy
@@ -376,6 +377,8 @@
       </table>
     </div>
   </div>
+</div>
+
 
   <div *ngIf="showDeleteAccountForm" class="modal-backdrop">
     <div class="modal-content p-4">
