--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -100,10 +100,11 @@
     </div>
   </div>
 
-  <div *ngIf="showFavorites" class="card p-4 mb-4">
+<div *ngIf="showFavorites" class="container mt-5">
+  <div class="card shadow-sm p-4 mb-4">
     <div class="table-responsive">
-      <table class="table table-striped">
-        <thead>
+      <table class="table table-striped table-hover">
+        <thead class="table-dark">
           <tr>
             <th scope="col">Alias</th>
             <th scope="col">Account ID</th>
@@ -111,11 +112,11 @@
         </thead>
         <tbody>
           <tr *ngFor="let favorite of favorites">
-            <td>{{ favorite.alias }}</td>
-            <td>
+            <td class="align-middle">{{ favorite.alias }}</td>
+            <td class="align-middle">
               {{ favorite.accountId }}
-              <button
-                class="btn btn-outline-secondary btn-sm"
+              <button style="background-color: black;"
+                class="btn btn-outline-secondary btn-sm ms-2"
                 (click)="copyToClipboard(favorite.accountId)"
               >
                 Copy
@@ -126,6 +127,8 @@
       </table>
     </div>
   </div>
+</div>
+
 
   <div *ngIf="showSendTokensForm" class="card mb-4">
     <div class="card-header">
