refactor: Update navbar brand text in app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   style="background-color: #1b1f3b; font-size: 1.5rem"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/"> Reward Distribution App</a>
+    <a class="navbar-brand" routerLink="/"> Reward Distribution Application</a>
     <div class="d-flex ms-auto">
       <a
         class="nav-item nav-link"
